<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_color"
    android:scrollbars="none" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:text="@string/addtask_addtask"
            android:textSize="30dp" >
        </TextView>

        <!-- title -->

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:text="@string/addtask_title"
                android:textSize="20dp" >
            </TextView>

            <EditText
                android:id="@+id/addtask_title_edit"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:hint="@string/addtask_title_hint" >
            </EditText>
        </LinearLayout>

        <!-- location -->

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:text="@string/addtask_location"
                android:textSize="20dp" >
            </TextView>

            <EditText
                android:id="@+id/addtask_location_edit"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:hint="@string/addtask_location_hint" >
            </EditText>
        </LinearLayout>

        <!-- progress -->

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:text="@string/addtask_progress"
                android:textSize="20dp" >
            </TextView>

            <TextView
                android:id="@+id/addtask_progressPercent"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:text="@string/addtask_progress_percent"
                android:textSize="20dp" >
            </TextView>
        </LinearLayout>

        <SeekBar
            android:id="@+id/addtask_progressBar"
            android:layout_width="fill_parent"
            android:layout_height="30dp"
            android:layout_margin="10dp" />

        <!-- deadline time -->

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:text="@string/addtask_deadlinetime"
                android:textSize="20dp" >
            </TextView>

            <Button
                android:id="@+id/addtask_deadlinedate_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp" >
            </Button>

            <Button
                android:id="@+id/addtask_deadlinetime_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp" >
            </Button>
        </LinearLayout>

        <!-- reminder -->

        <RelativeLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignParentTop="true"
                android:layout_margin="10dp"
                android:text="@string/addtask_reminder"
                android:textSize="20dp" >
            </TextView>

            <CheckBox
                android:id="@+id/addtask_reminder_checkBox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_alignParentTop="true" />
        </RelativeLayout>

        <!-- cancel / confirm -->

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <Button
                android:id="@+id/addtask_cancel_button"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_weight="50"
                android:text="@string/addtask_cancel" >
            </Button>

            <Button
                android:id="@+id/addtask_confirm_button"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_weight="50"
                android:text="@string/addtask_confirm" >
            </Button>
        </LinearLayout>
    </LinearLayout>

</ScrollView>