<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/gs_username" />


    <EditText
        android:id="@+id/gs_username"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:singleLine="true" >

        <requestFocus />
    </EditText>

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/gs_password" />

    <EditText
        android:id="@+id/gs_password"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:password="true" />

    <LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <LinearLayout
            xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="150dp"
            android:layout_height="fill_parent"
            android:orientation="vertical" >

            <RadioGroup
                android:id="@+id/gs_rgpass"
                android:layout_width="135dp"
                android:layout_height="wrap_content"
                android:orientation="vertical" >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/gs_fromthepass" />

                <RadioButton
                    android:id="@+id/gs_pass7"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/gs_day1" />

                <RadioButton
                    android:id="@+id/gs_pass30"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:checked="true"
                    android:text="@string/gs_day2" />
					
                <RadioButton
                    android:id="@+id/gs_pass60"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/gs_day3" />

                <RadioButton
                    android:id="@+id/gs_pass90"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/gs_day4" />

                <RadioButton
                    android:id="@+id/gs_pass180"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/gs_day5" />

                <RadioButton
                    android:id="@+id/gs_pass365"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/gs_day6" />
            </RadioGroup>
        </LinearLayout>

        <LinearLayout
            xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="150dp"
            android:layout_height="fill_parent"
            android:orientation="vertical" >

            <RadioGroup
                android:id="@+id/gs_rgfuture"
                android:layout_width="135dp"
                android:layout_height="wrap_content"
                android:orientation="vertical" >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/gs_tothefuture" />

                <RadioButton
                    android:id="@+id/gs_future7"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/gs_day1" />

                <RadioButton
                    android:id="@+id/gs_future30"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:checked="true"
                    android:text="@string/gs_day2" />

                <RadioButton
                    android:id="@+id/gs_future60"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/gs_day3" />

                <RadioButton
                    android:id="@+id/gs_future90"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/gs_day4" />

                <RadioButton
                    android:id="@+id/gs_future180"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/gs_day5" />

                <RadioButton
                    android:id="@+id/gs_future365"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/gs_day6" />
            </RadioGroup>
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/gs_sync"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0.12"
            android:text="@string/gs_sync" />

        <Button
            android:id="@+id/gs_disconnect"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0.13"
            android:text="@string/gs_disconnect" />
    </LinearLayout>

</LinearLayout>
