<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/daily_linearlayout"
    android:layout_width="fill_parent"
    android:layout_height="match_parent"
    android:background="@color/background_color"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/dailyview_bAddEvent"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:layout_weight="33"
            android:text="@string/dailyview_addevent" >
        </Button>

        <Button
            android:id="@+id/exportjpg"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:layout_weight="33"
            android:text="@string/dailyview_export" />
    </LinearLayout>

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center" >

        <Button
            android:id="@+id/dailyview_bPrevious"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:layout_marginLeft="10dp"
            android:text="@string/dailyview_previous" >
        </Button>

        <Button
            android:id="@+id/dailyview_bNext"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_alignParentTop="true"
            android:layout_marginRight="10dp"
            android:text="@string/dailyview_next" />

        <TextView
            android:id="@+id/dailyview_today"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@+id/dailyview_bPrevious"
            android:layout_alignTop="@+id/dailyview_bPrevious"
            android:layout_toLeftOf="@+id/dailyview_bNext"
            android:layout_toRightOf="@+id/dailyview_bPrevious"
            android:gravity="center"
            android:textColor="@color/text_color"
            android:textSize="20dp" 
            android:maxLines="1">
        </TextView>
    </RelativeLayout>

    <View
        android:layout_width="fill_parent"
        android:layout_height="2dp"
        android:layout_marginTop="5dp"
        android:background="@color/view_color" >
    </View>

    <ScrollView
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scrollbars="none" >

        <RelativeLayout
            xmlns:android="http://schemas.android.com/apk/res/android"
            android:id="@+id/daily_relativelayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:background="@color/background_color"
            android:orientation="vertical" >

            <!-- time text from 12am to 12pm -->

            <TextView
                android:id="@+id/twelve_am"
                android:layout_width="wrap_content"
                android:layout_height="60dp"
                android:layout_alignParentLeft="true"
                android:text="@string/twelve_am"
                android:textColor="@color/text_color" >
            </TextView>

            <!-- line in 12:00 -->


            <!-- line in each xx:30 -->

        </RelativeLayout>
    </ScrollView>

</LinearLayout>